# ProHiC

./: .gitignore  LICENSE  README.md  pyproject.toml
prohic/: colormaps.py  prohic.py
testdata/: testdata-readme.txt
testdata/Caulobacter/: Caulobacter.mcool  Caulobacter_DNA-pol.gff3  Caulobacter_GC-skew.bedgraph  Caulobacter_RNA-pol.gff3  Caulobacter_ori-ter.bed  Caulobacter_rRNA.gff3  Caulobacter_tRNA.gff3
testdata/Haloferax/: Haloferax.mcool  Haloferax_RNA-seq.bedgraph  Haloferax_rRNA.gff3  Haloferax_tRNA.gff3
testdata/Sulfolobus/: Sulfolobus.mcool  Sulfolobus_DNA-pol.gff3  Sulfolobus_GC-skew.bedgraph  Sulfolobus_RNA-pol.gff3  Sulfolobus_RNA-seq.bedgraph  Sulfolobus_ori.bed  Sulfolobus_rRNA.gff3  Sulfolobus_tRNA.gff3
