[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProHiC"
version = "0.3.1"
authors = [{name="Mikhail A. Solovyev"}]
description = "Prokaryotic HiC Browser"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8, <3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
keywords = [
	"genomics",
	"bioinformatics",
	"Hi-C",
	"contact matrix"
]
dependencies = [
	"pyqt5",
	"pyqtgraph",
	"pgcolorbar",
	"pyshortcuts",
	"cooler"
]

[tool.setuptools]
packages = ["prohic"]

[project.urls]
"Homepage" = "https://github.com/a17sol/ProHiC"

[project.scripts]
prohic = "prohic.prohic:main"
